--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,12 @@
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +15,114 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Summary{
+  display: inline-block;
+  font-size: 35px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timeRange{
+  position:absolute;
+  font-size: 15px;
+  width: 150px;
+  display: inline-block;
+  right: 10px;
+  top: 10px;
 }
+
+#time{
+  position:absolute;
+  display: inline-block;
+  font-size: 20px;
+  right: 165px;
+  top: 17px;
+}
+
+.top{
+  position:relative;
+  bottom:100px;
+}
+
+
+.population{
+  position: relative;
+  display: inline-block;
+  /* Please check. There might be an issue with spacing at the bottom of the pade due to pop width. */
+  width:60%;
+  bottom:90px;
+}
+
+.TABLES{
+  position: relative;
+  display:inline-block;
+  width:300px;
+  bottom: 330px;
+  right:340px;
+}
+
+.table{
+  position:relative;
+  text-align: center;
+  font-size: 20px;
+  height: 100%;
+  width:100%;
+}
+
+.demographics{
+  position: relative;
+  display:inline-block;
+  top: 50px;
+  right:420px;
+  width:100px;
+}
+
+.age{
+  position:relative;
+  top:80px;
+}
+
+.race{
+  position:relative;
+  bottom:50px;
+}
+
+.mid{
+  position:relative;
+  bottom:350px;
+}
+
+.numberClients{
+  display: inline-block;
+}
+
+.graphHead{
+  position:relative;
+  /* display: inline-block; */
+}
+
+#cli{
+  left: 200px;
+}
+
+.mid{
+  width: 60%;
+  margin: auto;
+}
+
+/* .age{
+  display:inline-block;
+}
+
+.race{
+  display:inline-block;
+} */
+
+#ages{
+  left: 200px;
+}
+
+#races{
+  left: 200px;
+}
+
+
+
