--- a/src/Display.css
+++ b/src/Display.css
@@ -3,33 +3,60 @@
     display: flex;
     flex-direction: row;
     padding: 20px;
-    background-color: rgb(133, 114, 114);
+    background-color: rgb(255, 255, 255);
     justify-content: space-around;
+    outline: 1px solid black;
+  }
+
+  .form {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    outline: 1px solid black;
+    width: 550px;
+  }
+
+  .rp-container {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    background-color: rgb(255, 255, 255);
+    justify-content: space-around;
+    outline: 1px solid black; 
+  }  
+
+  .rp-container:hover {
+    background:rgb(145, 139, 139)
   }
   
   .container-horiz-white {
     display: flex;
     flex-direction: row;
     padding: 20px;
-    background-color: rgb(240, 230, 230);
+    background-color: rgb(255, 255, 255);
     justify-content: space-around;
+    outline: 1px solid black;
   }
   
   .container-vert {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background-color: rgb(250, 246, 246);
+    background-color: rgb(255, 255, 255);
   }
   
   .buttontest {
-    background-color: #4CAF50; /* Green */
+    background-color: #ffffff; /* Green */
     border: none;
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+  }
+
+  .buttontest:hover {
+    background:rgb(145, 139, 139)
   }
   
