--- a/src/App.css
+++ b/src/App.css
@@ -39,55 +39,118 @@
 
 .top{
   position:relative;
-  bottom:100px;
+  bottom:140px;
 }
 
 
 .population{
-  position: relative;
+  position: absolute;
   display: inline-block;
-  /* Please check. There might be an issue with spacing at the bottom of the pade due to pop width. */
-  width:60%;
-  bottom:90px;
+  width:93%;
+  top:100px;
+  right: 60px;
 }
 
-.TABLES{
-  position: relative;
+.topTables{
+  position: absolute;
   display:inline-block;
+  font-size: 20px;
   width:300px;
-  bottom: 330px;
-  right:340px;
+  top: 150px;
+  right:38%;
 }
 
 .table{
   position:relative;
   text-align: center;
-  font-size: 20px;
   height: 100%;
   width:100%;
 }
 
 .demographics{
-  position: relative;
+  position: absolute;
   display:inline-block;
-  top: 50px;
-  right:420px;
   width:100px;
+  /* top: 110px;
+  left:740px; */
 }
 
 .age{
   position:relative;
   top:80px;
+  left:110px;
 }
 
 .race{
   position:relative;
-  bottom:50px;
+  bottom:40px;
+  right:30px;
+}
+
+.upMid{
+  position:relative;
+  /* bottom:420px; */
+}
+
+.gen{
+  position:absolute;
+  display: inline-block;
+  height:30%;
+  width:25%;
+  font-size:15px;
+  top:400px;
+  left:50px;
+}
+
+.gender-sexuality{
+  position:absolute;
+  display: inline-block;
+  top:430px;
+  left:210px;
+}
+
+.genPie{
+  position:absolute;
+  top: -40px;
+  left:40px;
+}
+
+.sexualityPie{
+  position:absolute;
+  top: 9px;
+  left:230px;
+}
+
+#gender{
+  position:absolute;
+  right:30px;
+  top:10px;
+}
+.sexuality{
+  position:absolute;
+  right:148px;
+  top:-28px;
+}
+
+.sx{
+  position:absolute;
+  display: inline-block;
+  height:30%;
+  width:25%;
+  top:400px;
+  font-size:17px;
+  right:50px;
+}
+
+
+#gender, #sexuality{
+  position:relative;
+  top:20px;
 }
 
 .mid{
   position:relative;
-  bottom:350px;
+  bottom:370px;
 }
 
 .numberClients{
@@ -96,7 +159,6 @@
 
 .graphHead{
   position:relative;
-  /* display: inline-block; */
 }
 
 #cli{
@@ -104,24 +166,20 @@
 }
 
 .mid{
+  position:relative;
+  top: 850px;
   width: 60%;
   margin: auto;
 }
 
-/* .age{
-  display:inline-block;
-}
-
-.race{
-  display:inline-block;
-} */
-
 #ages{
   left: 200px;
+  top:20px;
 }
 
 #races{
-  left: 200px;
+  left: 340px;
+  top:20px;
 }
 
 
