--- a/src/App.css
+++ b/src/App.css
@@ -154,15 +154,17 @@
 }
 
 .numberClients{
+  position:relative;
   display: inline-block;
+  
 }
 
 .graphHead{
   position:relative;
 }
 
-#cli{
-  left: 200px;
+#clis{
+  right: 00px;
 }
 
 .mid{
@@ -182,5 +184,9 @@
   top:20px;
 }
 
+.map{
+  position:relative;
+  width: 100%;
+}
 
 
