--- a/src/App.css
+++ b/src/App.css
@@ -211,6 +211,21 @@
 }
 
 .logo {
+  margin-right:-174px;
+}
+
+.home {
   float:right;
 }
 
+.metric_css {
+  float:right;
+  margin-top:28px;
+  margin-right:35px;
+}
+
+.logout_css {
+  float:right;
+  margin-top:28px;
+  margin-right:-173px;
+}
