--- a/gnp_react/src/App.css
+++ b/gnp_react/src/App.css
@@ -1,20 +1,7 @@
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.gnp-logo {
-  height: 100px;
 }
 
 .App-header {
@@ -167,17 +154,15 @@
 }
 
 .numberClients{
-  position:relative;
   display: inline-block;
-  
 }
 
 .graphHead{
   position:relative;
 }
 
-#clis{
-  right: 00px;
+#cli{
+  left: 200px;
 }
 
 .mid{
@@ -197,9 +182,5 @@
   top:20px;
 }
 
-.map{
-  position:relative;
-  width: 100%;
-}
 
 
