Revert "Merge branch 'minseo-edits'"
This reverts commit a4c7942b2465e355c0e08b287f281fd00461f2c3, reversing
changes made to 9c43c4b83d91b77515a4b0c124f5cc028b46f6ac.

--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,12 @@
 }
 
 .timeRange{
-  position:relative;
+  position:absolute;
   font-size: 15px;
   width: 150px;
   display: inline-block;
-  left: 490px;
-  top: 0px;
+  right: 10px;
+  top: 10px;
 }
 
 #time{
