--- a/src/Display.css
+++ b/src/Display.css
@@ -1,104 +1,35 @@
-.container-horiz-right {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  background-color: rgb(255, 255, 255);
-  justify-content: end;
-}
-
-.container-horiz-center {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  background-color: rgb(255, 255, 255);
-  justify-content: center;
-}
 
 .container-horiz {
     display: flex;
     flex-direction: row;
     padding: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(133, 114, 114);
     justify-content: space-around;
-    outline: 1px solid black;
-  }
-
-  .container-horiz-color {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    background-color: rgb(255, 255, 255);
-    justify-content: start
-  }
-
-  .container-horiz-tab {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    background-color: rgb(255, 255, 255);
-    justify-content: space-around;
-    width: 100%;
-    outline: 1px solid black;
-  }
-
-
-
-  .form {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-    outline: 1px solid black;
-    width: 550px;
-  }
-
-  .form-vert {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(255, 255, 255);
-
-  }
-
-  .rp-container {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    background-color: rgb(255, 255, 255);
-    justify-content: space-around;
-    outline: 1px solid black; 
-  }  
-
-  .rp-container:hover {
-    background:rgb(145, 139, 139)
   }
   
   .container-horiz-white {
     display: flex;
     flex-direction: row;
     padding: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(240, 230, 230);
     justify-content: space-around;
-    outline: 1px solid black;
   }
   
   .container-vert {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(250, 246, 246);
   }
   
   .buttontest {
-    background-color: #ffffff; /* Green */
+    background-color: #4CAF50; /* Green */
     border: none;
-    color: rgb(0, 0, 0);
+    color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-  }
-
-  .buttontest:hover {
-    background:rgb(145, 139, 139)
   }
   
