--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,204 @@
   text-align: center;
 }
 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.gnp-logo {
+  height: 100px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 60px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  height:10px; 
+}
+
+.Summary{
+  display: inline-block;
+  font-size: 35px;
 }
 
 .timeRange{
-  position: relative;
+  position:absolute;
   font-size: 15px;
   width: 150px;
   display: inline-block;
-  left: 490px;
-  top: 0px;
+  right: 10px;
+  top: 10px;
+}
+
+#time{
+  position:absolute;
+  display: inline-block;
+  font-size: 20px;
+  right: 165px;
+  top: 17px;
+}
+
+.top{
+  position:relative;
+  bottom:140px;
+}
+
+
+.population{
+  position: absolute;
+  display: inline-block;
+  width:93%;
+  top:100px;
+  right: 60px;
+}
+
+.topTables{
+  position: absolute;
+  display:inline-block;
+  font-size: 20px;
+  width:300px;
+  top: 150px;
+  right:38%;
+}
+
+.table{
+  position:relative;
+  text-align: center;
+  height: 100%;
+  width:100%;
+}
+
+.demographics{
+  position: absolute;
+  display:inline-block;
+  width:100px;
+  /* top: 110px;
+  left:740px; */
+}
+
+.age{
+  position:relative;
+  top:80px;
+  left:110px;
+}
+
+.race{
+  position:relative;
+  bottom:40px;
+  right:30px;
+}
+
+.upMid{
+  position:relative;
+  /* bottom:420px; */
+}
+
+.gen{
+  position:absolute;
+  display: inline-block;
+  height:30%;
+  width:25%;
+  font-size:15px;
+  top:400px;
+  left:50px;
+}
+
+.gender-sexuality{
+  position:absolute;
+  display: inline-block;
+  top:430px;
+  left:210px;
+}
+
+.genPie{
+  position:absolute;
+  top: -40px;
+  left:40px;
+}
+
+.sexualityPie{
+  position:absolute;
+  top: 9px;
+  left:230px;
+}
+
+#gender{
+  position:absolute;
+  right:30px;
+  top:10px;
+}
+.sexuality{
+  position:absolute;
+  right:148px;
+  top:-28px;
+}
+
+.sx{
+  position:absolute;
+  display: inline-block;
+  height:30%;
+  width:25%;
+  top:400px;
+  font-size:17px;
+  right:50px;
+}
+
+
+#gender, #sexuality{
+  position:relative;
+  top:20px;
+}
+
+.mid{
+  position:relative;
+  bottom:370px;
+}
+
+.numberClients{
+  position:relative;
+  display: inline-block;
+  
+}
+
+.graphHead{
+  position:relative;
+}
+
+#clis{
+  right: 00px;
+}
+
+.mid{
+  position:relative;
+  top: 850px;
+  width: 60%;
+  margin: auto;
+}
+
+#ages{
+  left: 200px;
+  top:20px;
+}
+
+#races{
+  left: 340px;
+  top:20px;
+}
+
+.map{
+  position:relative;
+  width: 100%;
 }
 
 .header {
